Changes for fixing the transaction commit in Booking Update